fix rotation of expanding button and also collapse 'new list' buttons [#166599576]

--- a/src/dashboard/tasklist/Lists.css
+++ b/src/dashboard/tasklist/Lists.css
@@ -324,7 +324,7 @@ li.task > .indicators {
   transition: transform 50ms;
 }
 
-.completed-tasks i.open {
+i.open {
   transform: rotate(45deg);
 }
 
